# onix-codegen

./: .bazelrc  .gitignore  BUILD.bazel  ChangeLog.md  LICENSE  Makefile  README.md  WORKSPACE  go.mod  go.sum  onix.cabal  org_editeur_release.bazel  org_editeur_release_2_1_rev03_schema.bazel  org_editeur_v3.bazel  package-lock.json  package.json  package.yaml  stack.yaml  tsconfig.json
.github/workflows/: test.yml
2_1_rev03_schema/: ONIX_BookProduct_CodeLists.xsd  ONIX_BookProduct_Release2.1_reference.xsd  ONIX_XHTML_Subset.xsd  ONIX_XHTML_Subset_reference.xsd  ONIX_XHTML_Subset_short.xsd  readme.txt  readme2.txt
app/: Main.hs
codelists/: index.ts
e2e/go/: BUILD.bazel  main.go
fixtures/: 20201200.json  20201200.onix  test_code_attribute_group_dot.xsd  test_code_attribute_group_ref.xsd  test_code_attribute_group_release.xsd  test_code_attributes.xsd  test_code_collect.xsd  test_code_description_codelists.xsd  test_code_dot_email.xsd  test_code_general_attributes.xsd  test_code_refname.xsd  test_code_space_separated.xsd  test_code_space_separated_codelists.xsd  test_code_territorycodelist.xsd  test_code_territorycodelist_codelists.xsd  test_mixed_flow.xsd  test_mixed_html.xsd  test_model_atom_enum.xsd  test_model_atom_ref.xsd  test_model_choice.xsd  test_model_dot.xsd  test_model_element_complex_type.xsd  test_model_general_attributes_simple.xsd  test_model_iterable.xsd  test_model_iterable_choice.xsd  test_model_list.xsd  test_model_notforsale.xsd  test_model_publication_date.xsd  test_parser.xsd
go/: BUILD.bazel  code.go  mixed.go  model.go  onix.gen.go  onix.go  reader.go
go/helper/: BUILD.bazel  main.go
src/: Code.hs  Lib.hs  Mixed.hs  Model.hs  Schema.hs  Util.hs  Xsd.hs  code.mustache  code.yml  mixed.mustache  model.mustache  reader.mustache  schema.yml
src/Xsd/: Parser.hs  Types.hs
template/go/v3/: reader.mustache
template/typescript/v2/: code.mustache  mixed.mustache  model.mustache  reader.mustache
test/: Spec.hs  TestCode.hs  TestMixed.hs  TestModel.hs  TestParser.hs  TestUtils.hs  test_code_description.xsd  test_model_atom_nonempty.xsd  test_model_atom_ref_byname.xsd  test_model_atomic.xsd  test_model_choice.xsd  test_model_element.xsd  test_model_html.xsd
