load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/kogai/onix-codegen
gazelle(name = "gazelle")

filegroup(
    name = "onix2p1",
    srcs = [
        "@org_editeur_v2//:ONIX_for_Books_Release2-1_rev03_schema+codes_Issue_36/ONIX_BookProduct_CodeLists.xsd",
        "@org_editeur_v2//:ONIX_for_Books_Release2-1_rev03_schema+codes_Issue_36/ONIX_BookProduct_Release2.1_reference.xsd",
        "@org_editeur_v2//:ONIX_for_Books_Release2-1_rev03_schema+codes_Issue_36/ONIX_BookProduct_Release2.1_short.xsd",
        "@org_editeur_v2//:ONIX_for_Books_Release2-1_rev03_schema+codes_Issue_36/ONIX_XHTML_Subset.xsd",
        "@org_editeur_v2//:ONIX_for_Books_Release2-1_rev03_schema+codes_Issue_36/ONIX_XHTML_Subset_reference.xsd",
        "@org_editeur_v2//:ONIX_for_Books_Release2-1_rev03_schema+codes_Issue_36/ONIX_XHTML_Subset_short.xsd",
        "@org_editeur_v2//:ONIX_for_Books_Release2-1_rev03_schema+codes_Issue_36/readme.txt",
        "@org_editeur_v2//:ONIX_for_Books_Release2-1_rev03_schema+codes_Issue_36/readme2.txt",
    ],
)

filegroup(
    name = "onix3p0p7",
    srcs = [
        "@org_editeur_v3//:ONIX_BookProduct_XSD_schema+codes_Issue_52/ONIX_BookProduct_3.0_reference.xsd",
        "@org_editeur_v3//:ONIX_BookProduct_XSD_schema+codes_Issue_52/ONIX_BookProduct_3.0_short.xsd",
        "@org_editeur_v3//:ONIX_BookProduct_XSD_schema+codes_Issue_52/ONIX_BookProduct_CodeLists.xsd",
        "@org_editeur_v3//:ONIX_BookProduct_XSD_schema+codes_Issue_52/ONIX_XHTML_Subset.xsd",
    ],
)

genrule(
    name = "onix_v2",
    srcs = [":onix2p1"],
    outs = ["v2"],
    cmd = "mkdir $(RULEDIR)/v2 && cp $(SRCS) $(RULEDIR)/v2",
)

genrule(
    name = "onix_v3",
    srcs = [":onix3p0p7"],
    outs = ["v3"],
    cmd = "mkdir $(RULEDIR)/v3 && cp $(SRCS) $(RULEDIR)/v3",
)

exports_files([
    # "fixtures/*.json",
    "fixtures/20201200.json",
    # "fixtures/*.onix",
    "fixtures/20201200.onix",
])
