load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "helper_lib",
    srcs = ["main.go"],
    importpath = "github.com/kogai/onix-codegen/go/helper",
    visibility = ["//visibility:private"],
    deps = ["//go"],
)

go_binary(
    name = "helper",
    embed = [":helper_lib"],
    visibility = ["//visibility:public"],
)
